--- a/MinforFrontEnd/MinforFrontEnd/MinforFrontEnd.csproj
+++ b/MinforFrontEnd/MinforFrontEnd/MinforFrontEnd.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -58,6 +59,12 @@
     <Compile Include="FrmIngresoCliente.Designer.cs">
       <DependentUpon>FrmIngresoCliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="MostrarVentas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MostrarVentas.Designer.cs">
+      <DependentUpon>MostrarVentas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmIngresoCliente.resx">
@@ -65,6 +72,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MostrarVentas.resx">
+      <DependentUpon>MostrarVentas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
