--- a/MinforFrontEnd/MinforFrontEnd/MinforFrontEnd.csproj
+++ b/MinforFrontEnd/MinforFrontEnd/MinforFrontEnd.csproj
@@ -47,11 +47,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AgregarArticulo.cs">
+    <Compile Include="FrmAgregarArticulo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AgregarArticulo.Designer.cs">
-      <DependentUpon>AgregarArticulo.cs</DependentUpon>
+    <Compile Include="FrmAgregarArticulo.Designer.cs">
+      <DependentUpon>FrmAgregarArticulo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmEliminarCargo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmEliminarCargo.Designer.cs">
+      <DependentUpon>FrmEliminarCargo.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmEliminarCliente.cs">
       <SubType>Form</SubType>
@@ -59,11 +65,11 @@
     <Compile Include="FrmEliminarCliente.Designer.cs">
       <DependentUpon>FrmEliminarCliente.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmEliminarArticulo1.cs">
+    <Compile Include="FrmEliminarArticulo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmEliminarArticulo1.Designer.cs">
-      <DependentUpon>FrmEliminarArticulo1.cs</DependentUpon>
+    <Compile Include="FrmEliminarArticulo.Designer.cs">
+      <DependentUpon>FrmEliminarArticulo.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmEliminarEmpleado.cs">
       <SubType>Form</SubType>
@@ -76,6 +82,12 @@
     </Compile>
     <Compile Include="FrmIngresarEmpleado.Designer.cs">
       <DependentUpon>FrmIngresarEmpleado.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmIngresoNuevoCargo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmIngresoNuevoCargo.Designer.cs">
+      <DependentUpon>FrmIngresoNuevoCargo.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmInventario.cs">
       <SubType>Form</SubType>
@@ -101,6 +113,12 @@
     <Compile Include="FrmGenerarFactura.Designer.cs">
       <DependentUpon>FrmGenerarFactura.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmModificarCargo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmModificarCargo.Designer.cs">
+      <DependentUpon>FrmModificarCargo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmModificarCliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -125,22 +143,25 @@
     <Compile Include="FrmMostrarVentas.Designer.cs">
       <DependentUpon>FrmMostrarVentas.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmVentanaPrincipal.cs">
+    <Compile Include="FrmVentanaPrincipalAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmVentanaPrincipal.Designer.cs">
-      <DependentUpon>FrmVentanaPrincipal.cs</DependentUpon>
+    <Compile Include="FrmVentanaPrincipalAdmin.Designer.cs">
+      <DependentUpon>FrmVentanaPrincipalAdmin.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="AgregarArticulo.resx">
-      <DependentUpon>AgregarArticulo.cs</DependentUpon>
+    <EmbeddedResource Include="FrmAgregarArticulo.resx">
+      <DependentUpon>FrmAgregarArticulo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmEliminarCargo.resx">
+      <DependentUpon>FrmEliminarCargo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmEliminarCliente.resx">
       <DependentUpon>FrmEliminarCliente.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmEliminarArticulo1.resx">
-      <DependentUpon>FrmEliminarArticulo1.cs</DependentUpon>
+    <EmbeddedResource Include="FrmEliminarArticulo.resx">
+      <DependentUpon>FrmEliminarArticulo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmEliminarEmpleado.resx">
       <DependentUpon>FrmEliminarEmpleado.cs</DependentUpon>
@@ -151,6 +172,9 @@
     <EmbeddedResource Include="frmIngresoCliente.resx">
       <DependentUpon>FrmIngresoCliente.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmIngresoNuevoCargo.resx">
+      <DependentUpon>FrmIngresoNuevoCargo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmInventario.resx">
       <DependentUpon>FrmInventario.cs</DependentUpon>
     </EmbeddedResource>
@@ -159,6 +183,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmGenerarFactura.resx">
       <DependentUpon>FrmGenerarFactura.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmModificarCargo.resx">
+      <DependentUpon>FrmModificarCargo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmModificarCliente.resx">
       <DependentUpon>FrmModificarCliente.cs</DependentUpon>
@@ -172,8 +199,8 @@
     <EmbeddedResource Include="FrmMostrarVentas.resx">
       <DependentUpon>FrmMostrarVentas.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmVentanaPrincipal.resx">
-      <DependentUpon>FrmVentanaPrincipal.cs</DependentUpon>
+    <EmbeddedResource Include="FrmVentanaPrincipalAdmin.resx">
+      <DependentUpon>FrmVentanaPrincipalAdmin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -183,6 +210,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
@@ -197,6 +225,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Blue-button.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fondo login.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
